# TanhCtrl

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: flatness_reference.yaml  tanh_ctrl.yaml
docs/superpowers/plans/: 2026-04-13-tanh-ctrl-structure-refactor.md  2026-04-14-dual-loop-callback-control.md
docs/superpowers/specs/: 2026-04-13-tanh-blocks-design.md  2026-04-13-tanh-ctrl-structure-refactor-design.md  2026-04-14-dual-loop-callback-control-design.md
include/tanh_ctrl/: common.hpp  tanh_blocks.hpp  tanh_controller.hpp  tanh_ctrl.hpp  tanh_ctrl_node.hpp  tanh_node.hpp  tools.hpp  types.hpp
launch/: demo.launch.py  px4_with_figure8.launch.py  tanh_ctrl.launch.py  tanh_ctrl_with_figure8.launch.py
msg/: FlatTrajectoryReference.msg
scripts/: build_tanh_ctrl.sh  flatness_reference_publisher.py
src/: common.cpp  tanh_blocks.cpp  tanh_controller.cpp  tanh_ctrl.cpp  tanh_ctrl_node.cpp  tanh_ctrl_node_main.cpp  tanh_node.cpp  tanh_node_main.cpp
test/: tanh_ctrl_core_feedforward_test.cpp  tanh_ctrl_node_topics_test.cpp  test_common.cpp  test_tanh_blocks.cpp  test_tanh_controller.cpp  test_tanh_controller_split.cpp  test_tanh_node_logic.cpp  test_tanh_node_mission_state.cpp  test_tools.cpp
